--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "executionInfo": {
      "elapsed": 9,
@@ -728,7 +728,8 @@
    "outputs": [],
    "source": [
     "# Split the data into training and testing sets\n",
-    "from sklearn.model_selection import train_test_split\n"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_df, y_df, test_size=0.2, random_state=42)"
    ]
   },
   {
