Completed coding for Part 1 will need to double check code

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -809,7 +809,9 @@
    ],
    "source": [
     "# Convert your X data to numeric data types however you see fit\n",
-    "# Add new code cells as necessary\n"
+    "# Add new code cells as necessary\n",
+    "X_train['OverTime'] = X_train['OverTime'].map({'No': 0, 'Yes': 1})\n",
+    "X_test['OverTime'] = X_test['OverTime'].map({'No': 0, 'Yes': 1})\n"
    ]
   },
   {
@@ -831,12 +833,14 @@
    "outputs": [],
    "source": [
     "# Create a StandardScaler\n",
-    "\n",
+    "scaler = StandardScaler()\n",
     "\n",
     "# Fit the StandardScaler to the training data\n",
+    "scaler.fit(X_train)\n",
     "\n",
-    "\n",
-    "# Scale the training and testing data\n"
+    "# Scale the training and testing data\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
@@ -881,13 +885,15 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "# Create a OneHotEncoder for the Department column\n",
-    "\n",
+    "department_encoder = OneHotEncoder(drop='first', sparse=False)\n",
     "\n",
     "# Fit the encoder to the training data\n",
-    "\n",
+    "department_encoder.fit(y_train[['Department']])\n",
     "\n",
     "# Create two new variables by applying the encoder\n",
-    "# to the training and testing data\n"
+    "# to the training and testing data\n",
+    "department_train_encoded = department_encoder.transform(X_train[['Department']])\n",
+    "department_test_encoded = department_encoder.transform(X_test[['Department']])"
    ]
   },
   {
@@ -930,13 +936,15 @@
    ],
    "source": [
     "# Create a OneHotEncoder for the Attrition column\n",
-    "\n",
+    "attrition_encoder = OneHotEncoder(drop='first', sparse=False)\n",
     "\n",
     "# Fit the encoder to the training data\n",
-    "\n",
+    "attrition_encoder.fit(y_train[['Attrition']])\n",
     "\n",
     "# Create two new variables by applying the encoder\n",
-    "# to the training and testing data\n"
+    "# to the training and testing data\n",
+    "attrition_train = attrition_encoder.transform(y_train[['Attrition']])\n",
+    "attrition_test = attrition_encoder.transform(y_test[['Attrition']])"
    ]
   },
   {
