Corrected part 1 coding

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -753,60 +753,7 @@
     "id": "NYubUJqiLCSp",
     "outputId": "6116187c-4afa-4d4a-aeb9-fdc2131d0d58"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OverTime</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>No</th>\n",
-       "      <td>797</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Yes</th>\n",
-       "      <td>305</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div><br><label><b>dtype:</b> int64</label>"
-      ],
-      "text/plain": [
-       "OverTime\n",
-       "No     797\n",
-       "Yes    305\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert your X data to numeric data types however you see fit\n",
     "# Add new code cells as necessary\n",
@@ -816,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -845,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -867,16 +814,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 1.],\n",
-       "       [0., 0., 1.],\n",
+       "array([[0., 1., 0.],\n",
        "       [0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
        "       ...,\n",
        "       [0., 1., 0.],\n",
        "       [0., 1., 0.],\n",
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,20 +832,21 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
     "# Create a OneHotEncoder for the Department column\n",
-    "department_encoder = OneHotEncoder(drop='first', sparse=False)\n",
+    "department_encoder = OneHotEncoder(sparse_output=False)\n",
     "\n",
     "# Fit the encoder to the training data\n",
     "department_encoder.fit(y_train[['Department']])\n",
     "\n",
     "# Create two new variables by applying the encoder\n",
     "# to the training and testing data\n",
-    "department_train_encoded = department_encoder.transform(X_train[['Department']])\n",
-    "department_test_encoded = department_encoder.transform(X_test[['Department']])"
+    "department_train_encoded = department_encoder.transform(y_train[['Department']])\n",
+    "department_test_encoded = department_encoder.transform(y_test[['Department']])\n",
+    "department_train_encoded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -920,31 +868,32 @@
     {
      "data": {
       "text/plain": [
-       "array([[0., 1.],\n",
-       "       [0., 1.],\n",
+       "array([[1., 0.],\n",
+       "       [1., 0.],\n",
        "       [1., 0.],\n",
        "       ...,\n",
-       "       [1., 0.],\n",
+       "       [0., 1.],\n",
        "       [1., 0.],\n",
        "       [1., 0.]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a OneHotEncoder for the Attrition column\n",
-    "attrition_encoder = OneHotEncoder(drop='first', sparse=False)\n",
+    "attrition_encoder = OneHotEncoder(sparse_output=False)\n",
     "\n",
     "# Fit the encoder to the training data\n",
     "attrition_encoder.fit(y_train[['Attrition']])\n",
     "\n",
     "# Create two new variables by applying the encoder\n",
     "# to the training and testing data\n",
-    "attrition_train = attrition_encoder.transform(y_train[['Attrition']])\n",
-    "attrition_test = attrition_encoder.transform(y_test[['Attrition']])"
+    "attrition_train_encoded = attrition_encoder.transform(y_train[['Attrition']])\n",
+    "attrition_test_encoded = attrition_encoder.transform(y_test[['Attrition']])\n",
+    "attrition_train_encoded"
    ]
   },
   {
