--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -846,6 +846,498 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Department_Human Resources",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Department_Research & Development",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Department_Sales",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "6eb0e29b-3b54-435d-b5bd-b1998f346fd0",
+       "rows": [
+        [
+         "0",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "1",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "2",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "3",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "4",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "5",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "6",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "7",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "8",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "9",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "10",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "11",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "12",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "13",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "14",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "15",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "16",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "17",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "18",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "19",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "20",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "21",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "22",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "23",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "24",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "25",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "26",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "27",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "28",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "29",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "30",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "31",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "32",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "33",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "34",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "35",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "36",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "37",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "38",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "39",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "40",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "41",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "42",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "43",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "44",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "45",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "46",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "47",
+         "0.0",
+         "0.0",
+         "1.0"
+        ],
+        [
+         "48",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "49",
+         "0.0",
+         "1.0",
+         "0.0"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 1176
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Department_Human Resources</th>\n",
+       "      <th>Department_Research &amp; Development</th>\n",
+       "      <th>Department_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1171</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1172</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1173</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1174</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1175</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1176 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Department_Human Resources  Department_Research & Development  \\\n",
+       "0                            0.0                                1.0   \n",
+       "1                            0.0                                1.0   \n",
+       "2                            0.0                                0.0   \n",
+       "3                            0.0                                1.0   \n",
+       "4                            0.0                                1.0   \n",
+       "...                          ...                                ...   \n",
+       "1171                         0.0                                1.0   \n",
+       "1172                         0.0                                1.0   \n",
+       "1173                         0.0                                1.0   \n",
+       "1174                         0.0                                1.0   \n",
+       "1175                         0.0                                0.0   \n",
+       "\n",
+       "      Department_Sales  \n",
+       "0                  0.0  \n",
+       "1                  0.0  \n",
+       "2                  1.0  \n",
+       "3                  0.0  \n",
+       "4                  0.0  \n",
+       "...                ...  \n",
+       "1171               0.0  \n",
+       "1172               0.0  \n",
+       "1173               0.0  \n",
+       "1174               0.0  \n",
+       "1175               1.0  \n",
+       "\n",
+       "[1176 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a DataFrame with the encoded columns\n",
+    "#department_encoded_columns = department_encoder.get_feature_names_out(['Department'])\n",
+    "#department_train_encoded_df = pd.DataFrame(department_train_encoded, columns=department_encoded_columns)\n",
+    "#department_test_encoded_df = pd.DataFrame(department_test_encoded, columns=department_encoded_columns)\n",
+    "#department_train_encoded_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the original Department column from y_train and y_test\n",
+    "#y_train = y_train.drop(columns=['Department'])\n",
+    "#y_test = y_test.drop(columns=['Department'])\n",
+    "# Add the new encoded columns to y_train and y_test\n",
+    "#y_train = pd.concat([X_train, department_train_encoded_df], axis=1)\n",
+    "#y_test = pd.concat([X_test, department_test_encoded_df], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {
     "colab": {
@@ -894,6 +1386,34 @@
     "attrition_train_encoded = attrition_encoder.transform(y_train[['Attrition']])\n",
     "attrition_test_encoded = attrition_encoder.transform(y_test[['Attrition']])\n",
     "attrition_train_encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a DataFrame with the encoded columns\n",
+    "\n",
+    "#attrition_encoded_columns = department_encoder.get_feature_names_out(['Attrition'])\n",
+    "#attrition_train_encoded_df = pd.DataFrame(attrition_train_encoded, columns=attrition_encoded_columns)\n",
+    "#attrition_test_encoded_df = pd.DataFrame(attrition_test_encoded, columns=attrition_encoded_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the original Attrition column from y_train and y_test\n",
+    "# Add the new encoded columns to y_train and y_test\n",
+    "\n",
+    "#y_train = y_train.drop(columns=['Attrition'])\n",
+    "#y_test = y_test.drop(columns=['Attrition'])\n",
+    "#y_train = pd.concat([X_train, attrition_train_encoded_df], axis=1)\n",
+    "#y_test = pd.concat([X_test, attrition_test_encoded_df], axis=1)"
    ]
   },
   {
