coding up to train model

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -1427,6 +1427,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "executionInfo": {
@@ -1444,12 +1464,15 @@
    "outputs": [],
    "source": [
     "# Find the number of columns in the X training data.\n",
-    "\n",
+    "n_features = X_train.shape[1]\n",
+    "print(n_features)\n",
     "\n",
     "# Create the input layer\n",
+    "input_layer = layers.Input(shape=(n_features,), name='input_features')\n",
     "\n",
-    "\n",
-    "# Create at least two shared layers\n"
+    "# Create at least two shared layers\n",
+    "shared_layer1 = layers.Dense(64, activation='relu')(input_layer)\n",
+    "shared_layer2 = layers.Dense(32, activation='relu')(shared_layer1)"
    ]
   },
   {
@@ -1474,9 +1497,10 @@
     "# with a hidden layer and an output layer\n",
     "\n",
     "# Create the hidden layer\n",
+    "shared_layer3 = layers.Dense(16, activation='relu')(shared_layer2)\n",
     "\n",
-    "\n",
-    "# Create the output layer\n"
+    "# Create the output layer\n",
+    "department_output = layers.Dense(1, activation='softmax')(shared_layer3)"
    ]
   },
   {
@@ -1501,9 +1525,10 @@
     "# with a hidden layer and an output layer\n",
     "\n",
     "# Create the hidden layer\n",
+    "shared_layer4 = layers.Dense(16, activation='relu')(shared_layer2)\n",
     "\n",
-    "\n",
-    "# Create the output layer\n"
+    "# Create the output layer\n",
+    "attrition_output = layers.Dense(1, activation='sigmoid')(shared_layer4)"
    ]
   },
   {
@@ -1628,12 +1653,15 @@
    ],
    "source": [
     "# Create the model\n",
-    "\n",
+    "model = Model(inputs=input_layer, outputs=[department_output, attrition_output])\n",
     "\n",
     "# Compile the model\n",
+    "model.compile(optimizer='adam',\n",
+    "               loss={'department_output' : 'categorical_crossentropy', 'attrition_output' : 'binary_crossentropy'},\n",
+    "                 metrics={'department_output' : 'accuracy', 'attrition_output' : 'accuracy'})\n",
     "\n",
-    "\n",
-    "# Summarize the model\n"
+    "# Summarize the model\n",
+    "model.summary()"
    ]
   },
   {
