--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -921,8 +921,8 @@
     "#y_train = y_train.drop(columns=['Department'])\n",
     "#y_test = y_test.drop(columns=['Department'])\n",
     "# Add the new encoded columns to y_train and y_test\n",
-    "#y_train = pd.concat([X_train, department_train_encoded_df], axis=1)\n",
-    "#y_test = pd.concat([X_test, department_test_encoded_df], axis=1)"
+    "#y_train = pd.concat([y_train, department_train_encoded_df], axis=1)\n",
+    "#y_test = pd.concat([y_test, department_test_encoded_df], axis=1)"
    ]
   },
   {
@@ -1001,8 +1001,8 @@
     "\n",
     "#y_train = y_train.drop(columns=['Attrition'])\n",
     "#y_test = y_test.drop(columns=['Attrition'])\n",
-    "#y_train = pd.concat([X_train, attrition_train_encoded_df], axis=1)\n",
-    "#y_test = pd.concat([X_test, attrition_test_encoded_df], axis=1)"
+    "#y_train = pd.concat([y_train, attrition_train_encoded_df], axis=1)\n",
+    "#y_test = pd.concat([y_test, attrition_test_encoded_df], axis=1)"
    ]
   },
   {
