--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -177,7 +177,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "60b41cf0-515d-4a56-8ffe-5554c243bfb1",
+       "ref": "bfac3de5-cf34-48e7-b8be-68190981159d",
        "rows": [
         [
          "0",
@@ -929,7 +929,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "61cec022-111a-4dee-a24b-f07b4a1402ff",
+       "ref": "371d286d-4243-4816-b190-d0755645d788",
        "rows": [
         [
          "0",
@@ -1393,6 +1393,45 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1420 entries, 1097 to 1168\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                             Non-Null Count  Dtype  \n",
+      "---  ------                             --------------  -----  \n",
+      " 0   Attrition                          1176 non-null   object \n",
+      " 1   Department_Human Resources         1176 non-null   float64\n",
+      " 2   Department_Research & Development  1176 non-null   float64\n",
+      " 3   Department_Sales                   1176 non-null   float64\n",
+      "dtypes: float64(3), object(1)\n",
+      "memory usage: 55.5+ KB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 534 entries, 1041 to 293\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                             Non-Null Count  Dtype  \n",
+      "---  ------                             --------------  -----  \n",
+      " 0   Attrition                          294 non-null    object \n",
+      " 1   Department_Human Resources         294 non-null    float64\n",
+      " 2   Department_Research & Development  294 non-null    float64\n",
+      " 3   Department_Sales                   294 non-null    float64\n",
+      "dtypes: float64(3), object(1)\n",
+      "memory usage: 20.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_train.info()\n",
+    "y_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1423,7 +1462,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1472,7 +1511,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train.drop(columns=['Attrition_nan'], inplace=True)\n",
+    "y_test.drop(columns=['Attrition_nan'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1530,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 1464 entries, 1097 to 1419\n",
-      "Data columns (total 6 columns):\n",
+      "Data columns (total 5 columns):\n",
       " #   Column                             Non-Null Count  Dtype  \n",
       "---  ------                             --------------  -----  \n",
       " 0   Department_Human Resources         1176 non-null   float64\n",
@@ -1489,12 +1538,11 @@
       " 2   Department_Sales                   1176 non-null   float64\n",
       " 3   Attrition_No                       1420 non-null   float64\n",
       " 4   Attrition_Yes                      1420 non-null   float64\n",
-      " 5   Attrition_nan                      1420 non-null   float64\n",
-      "dtypes: float64(6)\n",
-      "memory usage: 80.1 KB\n",
+      "dtypes: float64(5)\n",
+      "memory usage: 68.6 KB\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 719 entries, 1041 to 533\n",
-      "Data columns (total 6 columns):\n",
+      "Data columns (total 5 columns):\n",
       " #   Column                             Non-Null Count  Dtype  \n",
       "---  ------                             --------------  -----  \n",
       " 0   Department_Human Resources         294 non-null    float64\n",
@@ -1502,9 +1550,8 @@
       " 2   Department_Sales                   294 non-null    float64\n",
       " 3   Attrition_No                       534 non-null    float64\n",
       " 4   Attrition_Yes                      534 non-null    float64\n",
-      " 5   Attrition_nan                      534 non-null    float64\n",
-      "dtypes: float64(6)\n",
-      "memory usage: 39.3 KB\n"
+      "dtypes: float64(5)\n",
+      "memory usage: 33.7 KB\n"
      ]
     }
    ],
@@ -1524,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "executionInfo": {
      "elapsed": 309,
@@ -1562,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "executionInfo": {
      "elapsed": 118,
@@ -1590,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "executionInfo": {
      "elapsed": 9,
@@ -1618,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1753,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1794,7 +1841,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Train the model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidation_split\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[25], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Train the model\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m history \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m32\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalidation_split\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.2\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mc:\\Users\\jason\\anaconda3\\envs\\dev\\lib\\site-packages\\keras\\src\\utils\\traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[0;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
       "File \u001b[1;32mc:\\Users\\jason\\anaconda3\\envs\\dev\\lib\\site-packages\\keras\\src\\trainers\\compile_utils.py:754\u001b[0m, in \u001b[0;36mCompileLoss.call\u001b[1;34m(self, y_true, y_pred, sample_weight)\u001b[0m\n\u001b[0;32m    748\u001b[0m                 y_true_struct \u001b[38;5;241m=\u001b[39m tree\u001b[38;5;241m.\u001b[39mmap_structure(\n\u001b[0;32m    749\u001b[0m                     \u001b[38;5;28;01mlambda\u001b[39;00m _: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m\"\u001b[39m, y_true\n\u001b[0;32m    750\u001b[0m                 )\n\u001b[0;32m    751\u001b[0m                 y_pred_struct \u001b[38;5;241m=\u001b[39m tree\u001b[38;5;241m.\u001b[39mmap_structure(\n\u001b[0;32m    752\u001b[0m                     \u001b[38;5;28;01mlambda\u001b[39;00m _: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m\"\u001b[39m, y_pred\n\u001b[0;32m    753\u001b[0m                 )\n\u001b[1;32m--> 754\u001b[0m                 \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    755\u001b[0m                     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_true and y_pred have different structures.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    756\u001b[0m                     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_true: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00my_true_struct\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    757\u001b[0m                     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_pred: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00my_pred_struct\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    758\u001b[0m                 )\n\u001b[0;32m    760\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuilt:\n\u001b[0;32m    761\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuild(y_true, y_pred)\n",
       "\u001b[1;31mValueError\u001b[0m: y_true and y_pred have different structures.\ny_true: *\ny_pred: ['*', '*']\n"
