Updated some code

--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -177,7 +177,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "07898694-37b7-4119-b9b7-1481209f72a5",
+       "ref": "7ffd8bcd-a178-43f8-bc92-6171e38a935e",
        "rows": [
         [
          "0",
@@ -929,7 +929,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "ed0f6e78-dd20-45d2-a14c-6baacf3a807e",
+       "ref": "fb58a888-cc2d-489c-8ef5-fd369240817b",
        "rows": [
         [
          "0",
@@ -1496,13 +1496,466 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Attrition_No",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Attrition_Yes",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Attrition_nan",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "fce4207b-5c1d-45c7-bb99-1b81134a264e",
+       "rows": [
+        [
+         "0",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "1",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "2",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "3",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "4",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "5",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "6",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "7",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "8",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "9",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "10",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "11",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "12",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "13",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "14",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "15",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "16",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "17",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "18",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "19",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "20",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "21",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "22",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "23",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "24",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "25",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "26",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "27",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "28",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "29",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "30",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "31",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "32",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "33",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "34",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "35",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "36",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "37",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "38",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "39",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "40",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "41",
+         "0.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "42",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "43",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "44",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "45",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "46",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "47",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "48",
+         "1.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "49",
+         "1.0",
+         "0.0",
+         "0.0"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 1420
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Attrition_No</th>\n",
+       "      <th>Attrition_Yes</th>\n",
+       "      <th>Attrition_nan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1415</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1416</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1417</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1418</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1419</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1420 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Attrition_No  Attrition_Yes  Attrition_nan\n",
+       "0              1.0            0.0            0.0\n",
+       "1              1.0            0.0            0.0\n",
+       "2              1.0            0.0            0.0\n",
+       "3              1.0            0.0            0.0\n",
+       "4              1.0            0.0            0.0\n",
+       "...            ...            ...            ...\n",
+       "1415           0.0            0.0            1.0\n",
+       "1416           0.0            0.0            1.0\n",
+       "1417           0.0            0.0            1.0\n",
+       "1418           0.0            0.0            1.0\n",
+       "1419           0.0            0.0            1.0\n",
+       "\n",
+       "[1420 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a DataFrame with the encoded columns\n",
     "\n",
     "attrition_encoded_columns = attrition_encoder.get_feature_names_out(['Attrition'])\n",
     "attrition_train_encoded_df = pd.DataFrame(attrition_train_encoded, columns=attrition_encoded_columns)\n",
-    "attrition_test_encoded_df = pd.DataFrame(attrition_test_encoded, columns=attrition_encoded_columns)"
+    "attrition_test_encoded_df = pd.DataFrame(attrition_test_encoded, columns=attrition_encoded_columns)\n",
+    "attrition_train_encoded_df"
    ]
   },
   {
@@ -1522,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
