--- a/attrition.ipynb
+++ b/attrition.ipynb
@@ -1902,9 +1902,20 @@
    "source": [
     "YOUR ANSWERS HERE\n",
     "\n",
-    "1. \n",
-    "2. \n",
-    "3. "
+    "1. Based on the results, I do not think accuracy is the best metric to use on this data.  Looking at the results, the attrition output had and accuracy around 85%, while the department output was around 60%.  This difference suggest that the data is imbalanced.  Metrics like precision or AUC-ROC could provide model performance.\n",
+    "\n",
+    "2. I used softmax for the department output layer and sigmoid for the attrition output layer.\n",
+    "\n",
+    "    Softmax was used for the department output layer because of the data being multi-class classification. Softmax was used because a probability distribution across all three departments was needed, and Softmax would ensure that the probabilities would sum to 1. Thus allowing the model to predict the most likely department for each employee.\n",
+    "\n",
+    "    Sigmoid was used for the attrition output layer because of the data being binary.  Sigmoid is better at dealing with binary data sets than Softmax and outputs a single value between 0 and 1.\n",
+    "\n",
+    "3. The model could be improved by:\n",
+    "    A. techniques like oversampling or SMOTE could help with the attrition data by creating additional samples to boost the data.\n",
+    "    \n",
+    "    B. using diffrent sets of features or adding new features may help.\n",
+    "\n",
+    "    C. hyperparameter tuning the model (ammount of layers, number of nodes, number of epochs) could help."
    ]
   },
   {
